--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ blockquote {
 }
 
 footer {
-    position: fixed;
+    position: relative;
     bottom: 0;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.7);
