--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ kbd {
     --background-color: #fff;
     --color: hsl(205, 20%, 32%);
     --h1-color: hsl(205, 30%, 15%);
-    --h2-color: #24333e;
+    --h2-color: #328c48;
     --h3-color: hsl(205, 25%, 23%);
     --h4-color: #374956;
     --h5-color: hsl(205, 20%, 32%);
